--- a/style.css
+++ b/style.css
@@ -1,107 +1,107 @@
-@font-face {
-    font-family: "Inter-bold-font";
-    src: url(assets/fonts/static/Inter-Bold.ttf);
-}
-@font-face {
-    font-family: "Inter-regular-font";
-    src: url(assets/fonts/static/Inter-Regular.ttf);
-}
-@font-face {
-    font-family: "Inter-semibold-font";
-    src: url(assets/fonts/static/Inter-SemiBold.ttf);
-}
-@font-face {
-    font-family: "Inter-varible-font";
-    src: url(assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
-}
-:root{
-    /* Primary */
+ :root{
+    /* Colors */
+
     --Green: hsl(75, 94%, 57%);
-    --font-family-bold: "Inter-bold-font";
-    --font-family-semibold: "Inter-semibold-font";
-    --font-family-regular: "Inter-regular-font";
-    --font-family-Primary: "Inter-varible-font";
-    
-    /*Neutral */
     --White: hsl(0, 0%, 100%);
-    --Grey: hsl(0, 0%, 20%);
-    --Dark-Grey: hsl(0, 0%, 12%);
-    --Off-Black: hsl(0, 0%, 8%);
+    --Grey-700: hsl(0, 0%, 20%);
+    --Grey-800: hsl(0, 0%, 12%);
+    --Grey-900: hsl(0, 0%, 8%);
+
+    /* Typography */
+    
+    --Font-size-heading-1: 1.5rem;
+    --Font-size-heading-2: 14px;
+    --Font-size-paragraph: 14px;
+
+    /* Font */
+
+    --Font-Family: Inter;
+    --Weight-Heading-1: 700;
+    --Weight-Heading-2: 600;
+    --Weight-paragraph: 400;
 }
 
+@font-face {
+    font-family: Inter;
+    src: url(./assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+}
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    font-family: var(--font-family-Primary);
+    padding: 0;
+    margin: 0;
 }
+
 body{
-    background-color: var(--Off-Black);
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-}
-article{
-    background-color: var(--Dark-Grey);
-    width: 325px;
-    border-radius: 10px;
-}
-article figure{
-    display: block;
-    margin: 20px;
-}
-article figure img{
-    display: block;
-    margin: auto;
-    width: 90px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
-article figure figcaption{
-    text-align: center;
-}
-article figure figcaption h1{
-    cursor: pointer;
-    font-size: 20px;
-    color: var(--White);
-    font-family: var(--font-family-semibold);
-    margin-bottom: 13px;
-}
-article figure figcaption h2{
-    cursor: pointer;
-    font-size: 12px;
-    color: var(--Green);
-    margin-bottom: 30px;
+    background-color: var(--Grey-900);
+    font-size: var(--Font-size-paragraph);
+
+    main{
+        height: 100vh;
+        color: var(--White);
+        font-family: var(--Font-Family);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        article{
+            width: 340px;
+            background-color: var(--Grey-800);
+            border-radius: 10px;
+            padding: 24px;
+            header{
+                text-align: center;
+                img{
+                    border-radius: 50%;
+                    width: 92px;
+                }
+                
+                h1{
+                    margin-block-start: 24px;
+                    font-weight: var(--Weight-Heading-2);
+                    font-size: 24px;
+                    
+                }
+                
+                p{
+                    color: var(--Green);
+                    margin-block-start: 8px;
+                    font-weight: var(--Font-size-heading-1);
+                }
+            }
+
+            section{
+                text-align: center;
+                
+                p{
+                    margin-block-start: 24px;
+                    margin-block-end: 24px;
+                }
     
-}
-article figure figcaption p{
-    font-family: var(--font-family-semibold);
-    font-size: 13px;
-    color: var(--White);
-    /* margin-bottom: px; */
-}
-article section{
-    margin: 25px 0;
-}
-article section a{
-    display: block;
-    background-color: var(--Grey);
-    margin: 16px 22px;
-    padding: 15px;
-    text-align: center;
-    border-radius: 5px;
-    font-size: 13px;
-    font-family: var(--font-family-semibold);
-    color: var(--White);
-    text-decoration: none;
-}
-article section a:hover{
-    background-color: var(--Off-Black);
+                ul{
+                    list-style: none;
+                    width: 100%;
     
-}
-footer{
-    position: absolute;
-    bottom: 0;
+                    li{
+                        background-color: var(--Grey-700);
+                        padding-block: 16px;
+                        text-align: center;
+                        margin-block-start: 16px;
+                        border-radius: 8px;
+
+                        &:active, &:hover {
+                            background-color: var(--Green);
+                            color: var(--Grey-900);
+                            font-weight: var(--Font-size-heading-2);
+                        }
+
+                        a{
+                            text-decoration: none;
+                            color: inherit;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
